--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -15,7 +15,7 @@
   <meta name="theme-color" content="#000000"/>
   <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Servicios jurídicos de consultoría legal en línea"
   />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
   <!--
