--- a/packages/admin-frontend/public/index.html
+++ b/packages/admin-frontend/public/index.html
@@ -15,7 +15,7 @@
   <meta name="theme-color" content="#000000"/>
   <meta
       name="description"
-      content="Servicios jurídicos de consultoría legal en línea"
+      content="Administración y configuración de la plataforma DEFOL"
   />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
   <!--
@@ -32,7 +32,7 @@
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
-  <title>DEFOL</title>
+  <title>DEFOL Admin</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
