--- a/packages/app-frontend/public/index.html
+++ b/packages/app-frontend/public/index.html
@@ -19,8 +19,8 @@
   />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
   <!--
-    manifest.json provides metadata used when your web app is installed on a
-    user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    manifest.json provides metadata used when your web www is installed on a
+    user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-www-manifest/
   -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
   <!--
@@ -35,7 +35,7 @@
   <title>DEFOL - Defensoría OnLine</title>
 </head>
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
+<noscript>You need to enable JavaScript to run this www.</noscript>
 <div id="root"></div>
 <!--
   This HTML file is a template.
